# spiris-client-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: create_customer.rs  create_invoice.rs  list_customers.rs  oauth_flow.rs
spiris-tui/: Cargo.toml  FEATURES_UPDATE_3.md  IMPROVEMENTS.md  README.md
spiris-tui/src/: app.rs  auth.rs  help.rs  main.rs  ui.rs
spiris-tui/src/screens/: mod.rs
src/: auth.rs  client.rs  lib.rs  retry.rs
